--- a/sass/self.scss
+++ b/sass/self.scss
@@ -1,2 +1,11 @@
+@import '../css/jquery.fancybox.min.css';
+
 @import 'vue';
 @import 'wow';
+
+.main-video li{
+    transform: scale(0);
+}
+.main-web li{
+    transform: scale(0);
+}
