--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -74,3 +74,18 @@
         height: 0;
     }
 }
+
+@include keyframes(kv) {
+    0% {
+        width: 100%;
+        left: 50%;
+    }
+    // 50% {
+    //     width: 250%;
+    //     left: 0;
+    // }
+    100% {
+        width: 200%;
+        left: 0;
+    }
+}
