--- a/sass/_kv.scss
+++ b/sass/_kv.scss
@@ -3,6 +3,7 @@
     position: fixed;
     top: 0;
     z-index: -1;
+    background: $fb;
     .outter {
         height: 100vh;
         position: relative;
@@ -42,12 +43,14 @@
         }
     }
     .bg {
-        position: absolute;
         width: 100%;
         height: 100vh;
         background: url(../img/bg-kv.jpg) no-repeat center / cover;
         z-index: -1;
-        top: 0;
+        @include pos-mid;
+        animation: kv 15s linear 1;
+        animation-fill-mode: forwards;
+        // left: 0;
     }
     .mask {
         @include m-only {
