--- a/sass/self.scss
+++ b/sass/self.scss
@@ -3,9 +3,9 @@
 @import 'vue';
 @import 'wow';
 
-.main-video li{
-    transform: scale(0);
-}
-.main-web li{
-    transform: scale(0);
-}
+// .main-video li{
+//     transform: scale(0);
+// }
+// .main-web li{
+//     transform: scale(0);
+// }
