--- a/sass/_wow.scss
+++ b/sass/_wow.scss
@@ -55,10 +55,13 @@
 
 @keyframes zoomIn {
     from {
-        transform: scale3d(0, 0, 0);
+        opacity: 0;
+        transform: scale3d(0.3, 0.3, 0.3);
     }
 
-    50% {}
+    50% {
+        opacity: 1;
+    }
 }
 
 .zoomIn {
