--- a/sass/_marketing.scss
+++ b/sass/_marketing.scss
@@ -9,13 +9,13 @@
             margin-top: 50px;
         }
         @include m-767 {
-            transform: scale(0.6);
+            transform: scale(0.75);
             margin-top: 0;
         }
-        @include m-374 {
-            transform: scale(0.6);
-            margin-top: -40px;
-        }
+        // @include m-374 {
+        //     transform: scale(0.6);
+        //     margin-top: -40px;
+        // }
     }
     .animate-title {
         font-size: 2.3rem;
