--- a/sass/_wow.scss
+++ b/sass/_wow.scss
@@ -116,6 +116,7 @@
 //         animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
 //     }
 // }
+
 @keyframes bounceInDown {
 
     from,
@@ -149,8 +150,17 @@
     }
 }
 
+@keyframes fadeInLeft {
+    from {
+        opacity: 0;
+        transform: translate3d(-100%, 0, 0);
+    }
 
-
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
 
 .fadeInUp {
     animation-name: fadeInUp;
@@ -158,6 +168,10 @@
 
 .fadeInRight {
     animation-name: fadeInRight;
+}
+
+.fadeInLeft {
+    animation-name: fadeInLeft;
 }
 
 .fadeIn {
