--- a/css/style.css
+++ b/css/style.css
@@ -1881,12 +1881,10 @@ _:-ms-fullscreen,
     height: 100%;
     display: block;
     border-radius: 50%;
-    z-index: 10;
-    visibility: hidden; }
+    z-index: 10; }
     .circle--rotate > li .icon {
       height: 75px;
       width: 75px;
-      visibility: visible;
       cursor: pointer;
       text-align: center;
       overflow: hidden;
@@ -2005,7 +2003,6 @@ _:-ms-fullscreen,
     color: #000; }
   .circle--slider .animate-more {
     opacity: 0;
-    visibility: hidden;
     -webkit-transition: all .5s .4s;
     transition: all .5s .4s;
     overflow: hidden;
@@ -2022,7 +2019,6 @@ _:-ms-fullscreen,
     transform: scale(0.8); }
   .circle--slider .animate.active .animate-more {
     opacity: 1;
-    visibility: visible;
     -webkit-transform: scale(1);
     transform: scale(1); }
   .circle--slider .animate.active .animate-img .animate-img__in {
