--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -37,6 +37,9 @@
         z-index: 3;
         background: #fff;
         top: 70px;
+        @include pc-1440 {
+            top: 50px;
+        }
         @include pc-1280 {
             padding-top: 35px;
             margin-bottom: 20px;
@@ -53,11 +56,11 @@
         margin-left: -15px;
         line-height: 1;
         @include pc-1440 {
-            font-size: 11rem;
-        }
-        @include m-1024 {
             font-size: 8rem;
         }
+        // @include m-1024 {
+        //     font-size: 8rem;
+        // }
         @include m-767 {
             font-size: 6rem;
             margin-left: -6px;
