--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -92,9 +92,11 @@
             pointer-events: none;
         }
         &:hover {
-            background: black;
-            color: white;
-            transform: translateY(-10px);
+            @include pc-only {
+                background: black;
+                color: white;
+                transform: translateY(-10px);
+            }
         }
         @include m-767 {
             @include size(65px);
@@ -245,7 +247,7 @@
     }
     @include m-767 {
         margin-bottom: 55px;
-        margin-top: 65%;
+        margin-top: 60%;
     }
     ul {
         display: flex;
@@ -254,17 +256,14 @@
 }
 
 .main-web {
-    width: 90%;
+    width: 80%;
     margin-top: 20%;
     @include pc-1440 {
-        width: 80%;
-        margin-top: 20%;
-    }
-    @include pc-1280 {
-        margin-top: 24%;
+        width: 85%;
+        margin-top: 17%;
     }
     @include m-767 {
-        margin-top: 65%;
+        margin-top: 60%;
         width: 85%;
         margin-bottom: 20px;
     }
