--- a/sass/_kv.scss
+++ b/sass/_kv.scss
@@ -41,6 +41,24 @@
         @include media-m(767px) {
             background: url(../img/svg/clip-m.svg) no-repeat bottom center / cover;
         }
+        &.ie { 
+            background: url(../img/svg/clip.png) no-repeat center / cover;
+            @media screen and (max-width: 1680px) and (min-height: 800px) {
+                background: url(../img/svg/clip-2.png) no-repeat center / cover;
+            }
+            @media screen and (max-width: 1200px) and (min-height: 800px) {
+                background: url(../img/svg/clip-3.png) no-repeat center / cover;
+            }
+            @media screen and (max-width: 1024px) and (min-height: 800px) {
+                background: url(../img/svg/clip-h.png) no-repeat center / cover;
+            }
+            @include pad-only {
+                background: url(../img/svg/clip-pad.png) no-repeat center / cover;
+            }
+            @include media-m(767px) {
+                background: url(../img/svg/clip-m.png) no-repeat bottom center / cover;
+            }
+        }
     }
     .bg {
         width: 100%;
