--- a/sass/_showCase.scss
+++ b/sass/_showCase.scss
@@ -99,6 +99,9 @@
         @include m-767 {
             padding: 50px 0 0;
         }
+        @include m-374 {
+            padding: 30px 0 0;
+        }
         .main {
             width: 100%;
             @include media-min(768px) {
