--- a/sass/_work-video.scss
+++ b/sass/_work-video.scss
@@ -34,11 +34,17 @@
             position: inherit;
             padding: 30px 10% 100px;
         }
+        @include m-374 {
+            padding: 15px 10% 75px;
+        }
     }
     h3 {
         margin-bottom: 10px;
         @include m-1024 {
             font-size: 1.8rem;
+        }
+        @include m-374 {
+            font-size: 1.6rem;
         }
     }
     p {
@@ -46,6 +52,9 @@
     }
     .work-tt {
         margin-bottom: 30px;
+        @include m-374 {
+            margin-bottom: 20px;
+        }
     }
     .work-info {
         margin-bottom: 10px;
@@ -53,6 +62,14 @@
             font-size: 1.4rem;
             @include m-1024 {
                 font-size: 1.6rem;
+            }
+            @include m-374 {
+                font-size: 1.4rem;
+            }
+        }
+        span {
+            @include m-767 {
+                display: inline;
             }
         }
     }
