--- a/sass/_kv.scss
+++ b/sass/_kv.scss
@@ -11,37 +11,46 @@
         overflow: hidden;
     }
     .slogan {
-        width: 415px;
+        // width: 415px;
         position: absolute;
         @extend %X50;
         top: 35vh;
         z-index: 3;
-        @include m-767 {
-            width: 80%;
+        font-size: 6rem;
+        color: #fff;
+        font-weight: bold;
+        @include pc-1440 {
             top: 30vh;
+        }
+        @include m-767 {
+            font-size: 4.5rem;
+            top: 27vh;
+        }
+        @include m-374 {
+            font-size: 3.5rem;
         }
     }
     .clip {
         width: 100%;
         height: 100vh;
-        background: url(../img/svg/clip.svg) no-repeat center / cover;
+        background: url(../img/mask.png) no-repeat center / cover, url(../img/svg/clip.svg) no-repeat center / cover;
         z-index: 0;
         @media screen and (max-width: 1680px) and (min-height: 800px) {
-            background: url(../img/svg/clip-2.svg) no-repeat center / cover;
+            background: url(../img/mask.png) no-repeat center / cover, url(../img/svg/clip-2.svg) no-repeat center / cover;
         }
         @media screen and (max-width: 1200px) and (min-height: 800px) {
-            background: url(../img/svg/clip-3.svg) no-repeat center / cover;
+            background: url(../img/mask-3.png) no-repeat center / cover, url(../img/svg/clip-3.svg) no-repeat center / cover;
         }
         @media screen and (max-width: 1024px) and (min-height: 800px) {
-            background: url(../img/svg/clip-h.svg) no-repeat center / cover;
+            background: url(../img/mask-h.png) no-repeat center / cover, url(../img/svg/clip-h.svg) no-repeat center / cover;
         }
-        @include pad-only {
-            background: url(../img/svg/clip-pad.svg) no-repeat center / cover;
+        @include m-1024 {
+            background: url(../img/mask-pad.png) no-repeat center / cover, url(../img/svg/clip-pad.svg) no-repeat center / cover;
         }
-        @include media-m(767px) {
-            background: url(../img/svg/clip-m.svg) no-repeat bottom center / cover;
+        @include m-767 {
+            background: url(../img/mask-m.png) no-repeat center / cover, url(../img/svg/clip-m.svg) no-repeat bottom center / cover;
         }
-        @include media-m(374px) {
+        @include m-374 {
             background-position: center;
         }
         &.ie {
