--- a/sass/_kv.scss
+++ b/sass/_kv.scss
@@ -28,6 +28,7 @@
         }
         @include m-767 {
             font-size: 4.5rem;
+            width: 80%;
             top: 27vh;
         }
         @include m-374 {
